# fytok_tutorial

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml  pyproject_.toml  requirements  setup.py
api_doc/: SpDM_API.rst  frontpage.md  fytok.ontology.rst  fytok.rst  spdm.rst
api_reference/: FyTok_API.rst  _config.yml  _toc.yml  frontpage.md  modules.rst
data/: g900003.00230_ITER_15MA_eqdsk16HR.txt
dev_reference/: SpDM_Entry.ipynb  SpDM_Entry_Database.ipynb  SpDM_File.ipynb  SpDM_HTree.ipynb  SpDM_Introduction.ipynb  SpDM_View.ipynb  _toc.yml
develop_guide/: frontpage.md
development/: SpDM_Entry_File.ipynb  SpDM_FunctionClass.ipynb
docs/: requirements  tutorial.md
examples/: demo_eq.ipynb  efit_east_demo.ipynb  efit_east_demo.py
quick_start/: FyTok_QuickStart.ipynb  FyTok_module_Device.ipynb  ch1_install.md  ch2_data_and_view.ipynb  ch2_eq_analyz.ipynb  ch3_modules.ipynb  ch4_contexts.ipynb  ch5_core_transport.ipynb  index.md
tutorial/: 00_QuickStart.ipynb  00_QuickStart.py  01_DataBinding.ipynb  01_File.ipynb  01_Transolver.ipynb  01_transport_solver.py  02-FyTrans.ipynb  02_experiment_data_mapping.ipynb  A02_Function.ipynb  A03_DataBinding.ipynb  B00_SpDB_Manual.ipynb  B01_SpDB_QuickStart.ipynb  B01_SpDB_QuickStart.md  B02_SpDB_Entry.ipynb  B02_SpDB_local_data.ipynb  B03_SpDB_Open_Entry.ipynb  B03_file.ipynb  B04_SpDB_MDSplus.ipynb  B04_SpDB_Open_Entr_file.ipynb  B04_SpDB_file.ipynb  B05_SpDB_MDSplus.ipynb  B06_sp_property.ipynb  B06_sp_property_new.ipynb  F00_FyTok_Manual.ipynb  FyTok_Installation.ipynb  (+33 more)
(+140 files in other folders)
