[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fytok_tutorial"

authors = [{ name = "Zhi YU", email = "yuzhi.student@gmail.com" }]

dynamic = ["version"]

readme = "README.md"

license = { file = "LICENSE.txt" }

description = "Tokamak integrated modeling and analysis toolkit."

classifiers = [
    "Development Status :: 0 - Beta",
    "Intended Audience :: Plasma Physicists",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

requires-python = ">=3.11"

dependencies = ["spdm", "fytok"]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

exclude = ["*.obsolete", "*.obsolete.*", "*.todo", "*.todo.*"]

namespaces = true

[tool.setuptools.package-data]
"*" = ["*.xml"]


[tool.setuptools.dynamic]
version = { file = "VERSION" }
